# Kamma

./: README.md  manage.py  pyproject.toml
kammalabel/: asgi.py  docs.py  settings.py  urls.py  wsgi.py
orders/: admin.py  models.py  serializers.py  urls.py  views.py
products/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
users/: admin.py  models.py  urls.py  views.py
users/serializers/: __init__.py  address.py  base.py  forgot.py  login.py  profile.py  random_number.py  register.py  user.py
utils/: serializers.py  server_utils.py  views.py
utils/default_string/: __init__.py  db_names.py  field_names.py  url_names.py
