[tool.poetry]
name = "kamma"
version = "0.1.0"
description = ""
authors = ["erfanhresh <erfan_bcln@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.1"
djangorestframework = "^3.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
